--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -32,6 +32,7 @@ jobs:
       # languages
       - name: Install APT dependencies
         run: |
+          apt remove cmdtest
           curl -sL https://deb.nodesource.com/setup_12.x | bash -
           curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
           echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
