Install yarn via npm

--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -32,7 +32,6 @@ jobs:
       # languages
       - name: Install APT dependencies
         run: |
-          apt remove cmdtest
           curl -sL https://deb.nodesource.com/setup_12.x | bash -
           curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
           echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
@@ -90,7 +89,7 @@ jobs:
           curl -sL https://deb.nodesource.com/setup_12.x | bash -
           curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
           echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-          apt-get -yqq install nodejs yarn
+          apt-get -yqq install nodejs
 
       # caching
       # - name: Get yarn cache
@@ -105,6 +104,9 @@ jobs:
       #     restore-keys: |
       #       yarn-unit-${{ env.cache-name }}-
       #       yarn-unit-
+
+      - name: Install yarn
+        run: npm i -g yarn
 
       - name: Check versions
         run: |
