--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -92,18 +92,18 @@ jobs:
           apt-get -yqq install nodejs
 
       # caching
-      # - name: Get yarn cache
-      #   id: yarn-cache
-      #   run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      # - name: Cache node modules
-      #   uses: actions/cache@v1
-      #   with:
-      #     path: ${{ steps.yarn-cache.outputs.dir }}
-      #     key: yarn-unit-${{ hashFiles('**/yarn.lock') }}
-      #     restore-keys: |
-      #       yarn-unit-${{ env.cache-name }}-
-      #       yarn-unit-
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: yarn-unit-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            yarn-unit-${{ env.cache-name }}-
+            yarn-unit-
 
       - name: Install yarn
         run: npm i -g yarn
