--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -44,7 +44,7 @@ jobs:
           path: vendor/bundle
           key: bundler-unit-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
-            bundler-unit-${{ env.cache-name }}-
+            bundler-unit-${{ hashFiles('**/Gemfile.lock') }}-
             bundler-unit-
 
       # dependencies
@@ -100,10 +100,10 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
-          key: yarn-unit-${{ hashFiles('**/yarn.lock') }}
+          key: yarn-unit-tests-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            yarn-unit-${{ env.cache-name }}-
-            yarn-unit-
+            yarn-unit-tests-${{ hashFiles('**/yarn.lock') }}-
+            yarn-unit-tests-
 
       - name: Install yarn
         run: npm i -g yarn
