--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,277 +12,166 @@ jobs:
     name: 'Lint: Rubocop'
     runs-on: ubuntu-18.04
 
+    container:
+      image: ruby:2.7.0
+
     steps:
       - uses: actions/checkout@v1
 
       # languages
-      - name: Set up RVM
-        run: curl -sSL https://get.rvm.io | bash
-
-      - name: Install Ruby ${{ env.RUBY_VERSION }}
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          rvm install ${{ env.RUBY_VERSION }} --binary
-          rvm --default use ${{ env.RUBY_VERSION }}
-
       - name: Install APT dependencies
-        run: sudo apt-get -yqq install libpq-dev
-
-      # caching
-      - name: Cache gems
-        uses: actions/cache@v1
-        with:
-          path: vendor/bundle
-          key: bundler-lint-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            bundler-lint-${{ env.cache-name }}-
-            bundler-lint-
+        run: |
+          curl -sL https://deb.nodesource.com/setup_12.x | bash -
+          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          apt-get -yqq install nodejs libpq-dev
 
       # dependencies
-      - name: Install Bundler gem
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          gem install bundler
-
       - name: Run bundle install
         run: |
-          source $HOME/.rvm/scripts/rvm
-          bundle config path vendor/bundle
           bundle config set without test development production
           bundle install --jobs 4 --retry 3 --deployment
 
       - name: Run rubocop
         run: |
-          source $HOME/.rvm/scripts/rvm
           bundle exec rubocop
 
   reek:
     name: 'Lint: Reek'
     runs-on: ubuntu-18.04
 
+    container:
+      image: ruby:2.7.0
+
     steps:
       - uses: actions/checkout@v1
 
       # languages
-      - name: Set up RVM
-        run: curl -sSL https://get.rvm.io | bash
-
-      - name: Install Ruby ${{ env.RUBY_VERSION }}
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          rvm install ${{ env.RUBY_VERSION }} --binary
-          rvm --default use ${{ env.RUBY_VERSION }}
-
       - name: Install APT dependencies
-        run: sudo apt-get -yqq install libpq-dev
-
-      # caching
-      - name: Cache gems
-        uses: actions/cache@v1
-        with:
-          path: vendor/bundle
-          key: bundler-lint-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            bundler-lint-${{ env.cache-name }}-
-            bundler-lint-
+        run: |
+          curl -sL https://deb.nodesource.com/setup_12.x | bash -
+          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          apt-get -yqq install nodejs libpq-dev
 
       # dependencies
-      - name: Install Bundler gem
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          gem install bundler
-
       - name: Run bundle install
         run: |
-          source $HOME/.rvm/scripts/rvm
-          bundle config path vendor/bundle
           bundle config set without test development production
           bundle install --jobs 4 --retry 3 --deployment
 
       - name: Run reek
         run: |
-          source $HOME/.rvm/scripts/rvm
           bundle exec reek
 
   brakeman:
     name: 'Lint: Brakeman'
     runs-on: ubuntu-18.04
 
+    container:
+      image: ruby:2.7.0
+
     steps:
       - uses: actions/checkout@v1
 
       # languages
-      - name: Set up RVM
-        run: curl -sSL https://get.rvm.io | bash
-
-      - name: Install Ruby ${{ env.RUBY_VERSION }}
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          rvm install ${{ env.RUBY_VERSION }} --binary
-          rvm --default use ${{ env.RUBY_VERSION }}
-
       - name: Install APT dependencies
-        run: sudo apt-get -yqq install libpq-dev
-
-      # caching
-      - name: Cache gems
-        uses: actions/cache@v1
-        with:
-          path: vendor/bundle
-          key: bundler-lint-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            bundler-lint-${{ env.cache-name }}-
-            bundler-lint-
+        run: |
+          curl -sL https://deb.nodesource.com/setup_12.x | bash -
+          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          apt-get -yqq install nodejs libpq-dev
 
       # dependencies
-      - name: Install Bundler gem
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          gem install bundler
-
       - name: Run bundle install
         run: |
-          source $HOME/.rvm/scripts/rvm
-          bundle config path vendor/bundle
           bundle config set without test development production
           bundle install --jobs 4 --retry 3 --deployment
 
       - name: Run brakeman
         run: |
-          source $HOME/.rvm/scripts/rvm
           bundle exec brakeman
 
   bundler-audit:
     name: 'Lint: Bundler Audit'
     runs-on: ubuntu-18.04
 
+    container:
+      image: ruby:2.7.0
+
     steps:
       - uses: actions/checkout@v1
 
       # languages
-      - name: Set up RVM
-        run: curl -sSL https://get.rvm.io | bash
-
-      - name: Install Ruby ${{ env.RUBY_VERSION }}
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          rvm install ${{ env.RUBY_VERSION }} --binary
-          rvm --default use ${{ env.RUBY_VERSION }}
-
       - name: Install APT dependencies
-        run: sudo apt-get -yqq install libpq-dev
-
-      # caching
-      - name: Cache gems
-        uses: actions/cache@v1
-        with:
-          path: vendor/bundle
-          key: bundler-lint-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            bundler-lint-${{ env.cache-name }}-
-            bundler-lint-
+        run: |
+          curl -sL https://deb.nodesource.com/setup_12.x | bash -
+          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          apt-get -yqq install nodejs libpq-dev
 
       # dependencies
-      - name: Install Bundler gem
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          gem install bundler
-
       - name: Run bundle install
         run: |
-          source $HOME/.rvm/scripts/rvm
-          bundle config path vendor/bundle
           bundle config set without test development production
           bundle install --jobs 4 --retry 3 --deployment
 
       - name: Install Bundler Audit
         run: |
-          source $HOME/.rvm/scripts/rvm
           gem install bundler-audit
 
       - name: Update advisory database
         run: |
-          source $HOME/.rvm/scripts/rvm
-          bundle exec bundler-audit update
+          bundler-audit update
 
       - name: Run bundler-audit
         run: |
-          source $HOME/.rvm/scripts/rvm
-          bundle exec bundler-audit
+          bundler-audit
 
   scsslint:
     name: 'Lint: SCSSLint'
     runs-on: ubuntu-18.04
 
+    container:
+      image: ruby:2.7.0
+
     steps:
       - uses: actions/checkout@v1
 
       # languages
-      - name: Set up RVM
-        run: curl -sSL https://get.rvm.io | bash
-
-      - name: Install Ruby ${{ env.RUBY_VERSION }}
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          rvm install ${{ env.RUBY_VERSION }} --binary
-          rvm --default use ${{ env.RUBY_VERSION }}
-
       - name: Install APT dependencies
-        run: sudo apt-get -yqq install libpq-dev
-
-      # caching
-      - name: Cache gems
-        uses: actions/cache@v1
-        with:
-          path: vendor/bundle
-          key: bundler-lint-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            bundler-lint-${{ env.cache-name }}-
-            bundler-lint-
+        run: |
+          curl -sL https://deb.nodesource.com/setup_12.x | bash -
+          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          apt-get -yqq install nodejs libpq-dev
 
       # dependencies
-      - name: Install Bundler gem
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          gem install bundler
-
       - name: Run bundle install
         run: |
-          source $HOME/.rvm/scripts/rvm
-          bundle config path vendor/bundle
           bundle config set without test development production
           bundle install --jobs 4 --retry 3 --deployment
 
       - name: Run SCSSLint
         run: |
-          source $HOME/.rvm/scripts/rvm
           bundle exec scss-lint
 
   eslint:
     name: 'Lint: ESLint'
     runs-on: ubuntu-18.04
 
+    container:
+      image: ruby:2.7.0
+
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
-      # caching
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Cache node modules
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: yarn-lint-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            yarn-lint-${{ env.cache-name }}-
-            yarn-lint-
+      - name: Install APT dependencies
+        run: |
+          curl -sL https://deb.nodesource.com/setup_12.x | bash -
+          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          apt-get -yqq install nodejs
 
       - name: Install yarn
         run: npm i -g yarn
