--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,13 +5,15 @@ on:
 
 env:
   RAILS_ENV: development
-  RUBY_VERSION: '2.7.0'
-  NODE_VERSION: '12.x'
+  DATABASE_URL: postgres://postgres:postgres@postgres:5432/gmmcalcombr_test
 
 jobs:
   admin:
     name: 'E2E: Admin'
     runs-on: ubuntu-18.04
+
+    container:
+      image: ruby:2.7.0
 
     services:
       postgres:
@@ -28,58 +30,20 @@ jobs:
       - uses: actions/checkout@v1
 
       # languages
-      - name: Set up RVM
-        run: curl -sSL https://get.rvm.io | bash
-
-      - name: Install Ruby ${{ env.RUBY_VERSION }}
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          rvm install ${{ env.RUBY_VERSION }} --binary
-          rvm --default use ${{ env.RUBY_VERSION }}
-          echo "source $HOME/.rvm/scripts/rvm" >> ~/.bash_profile
-
-      - name: Install Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
       - name: Install APT dependencies
-        run: sudo apt-get -yqq install libpq-dev
+        run: |
+          curl -sL https://deb.nodesource.com/setup_12.x | bash -
+          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          apt-get -yqq install nodejs libpq-dev xvfb libgtk-3-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
 
-      # caching
-      - name: Cache gems
-        uses: actions/cache@v1
-        with:
-          path: vendor/bundle
-          key: bundler-e2e-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            bundler-e2e-${{ env.cache-name }}-
-            bundler-e2e-
-
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo '::set-output name=dir::$(yarn cache dir)'
-
-      - name: Cache node modules
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: yarn-e2e-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            yarn-e2e-${{ env.cache-name }}-
-            yarn-e2e-
+      - name: Install yarn
+        run: npm i -g yarn
 
       # dependencies
-      - name: Install Bundler gem
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          gem install bundler
-
       - name: Run bundle install
         run: |
-          source $HOME/.rvm/scripts/rvm
-          bundle config path vendor/bundle
-          bundle config set without lint test production
+          bundle config set without test production
           bundle install --jobs 4 --retry 3 --deployment
 
       - name: Run yarn install
@@ -87,17 +51,14 @@ jobs:
 
       - name: Setup database
         run: |
-          source $HOME/.rvm/scripts/rvm
           bundle exec rails db:migrate
 
       - name: Compile assets
         run: |
-          source $HOME/.rvm/scripts/rvm
           bundle exec rails assets:precompile
 
       - name: Load default DB data
         run: |
-          source $HOME/.rvm/scripts/rvm
           bundle exec rails db:seed
 
       # script
@@ -113,6 +74,9 @@ jobs:
     name: 'E2E: Frontend'
     runs-on: ubuntu-18.04
 
+    container:
+      image: ruby:2.7.0
+
     services:
       postgres:
         image: postgres:11.5
@@ -127,59 +91,20 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      # languages
-      - name: Set up RVM
-        run: curl -sSL https://get.rvm.io | bash
-
-      - name: Install Ruby ${{ env.RUBY_VERSION }}
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          rvm install ${{ env.RUBY_VERSION }} --binary
-          rvm --default use ${{ env.RUBY_VERSION }}
-          echo "source $HOME/.rvm/scripts/rvm" >> ~/.bash_profile
-
-      - name: Install Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
       - name: Install APT dependencies
-        run: sudo apt-get -yqq install libpq-dev
+        run: |
+          curl -sL https://deb.nodesource.com/setup_12.x | bash -
+          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          apt-get -yqq install nodejs libpq-dev xvfb libgtk-3-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
 
-      # caching
-      - name: Cache gems
-        uses: actions/cache@v1
-        with:
-          path: vendor/bundle
-          key: bundler-e2e-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            bundler-e2e-${{ env.cache-name }}-
-            bundler-e2e-
-
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Cache node modules
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: yarn-e2e-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            yarn-e2e-${{ env.cache-name }}-
-            yarn-e2e-
+      - name: Install yarn
+        run: npm i -g yarn
 
       # dependencies
-      - name: Install Bundler gem
-        run: |
-          source $HOME/.rvm/scripts/rvm
-          gem install bundler
-
       - name: Run bundle install
         run: |
-          source $HOME/.rvm/scripts/rvm
-          bundle config path vendor/bundle
-          bundle config set without lint test production
+          bundle config set without test production
           bundle install --jobs 4 --retry 3 --deployment
 
       - name: Run yarn install
@@ -187,17 +112,14 @@ jobs:
 
       - name: Setup database
         run: |
-          source $HOME/.rvm/scripts/rvm
           bundle exec rails db:migrate
 
       - name: Compile assets
         run: |
-          source $HOME/.rvm/scripts/rvm
           bundle exec rails assets:precompile
 
       - name: Load default DB data
         run: |
-          source $HOME/.rvm/scripts/rvm
           bundle exec rails db:seed
 
       # script
