--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   RAILS_ENV: development
-  DATABASE_URL: postgres://postgres:postgres@postgres:5432/gmmcalcombr_test
+  DATABASE_URL: postgres://postgres:postgres@postgres:5432/gmmcalcombr_development
 
 jobs:
   admin:
