--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -12,6 +12,9 @@ jobs:
     name: 'Unit: Backend'
     runs-on: ubuntu-18.04
 
+    container:
+      image: ruby:2.7.0
+
     services:
       postgres:
         image: postgres:11.5
@@ -27,38 +30,32 @@ jobs:
       - uses: actions/checkout@v1
 
       # languages
-      - name: Install Ruby 2.6.x
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 2.6.x
-
       - name: Install APT dependencies
-        run: sudo apt-get -yqq install libpq-dev
-
-      # caching
-      - name: Cache gems
-        uses: actions/cache@v1
-        with:
-          path: vendor/bundle
-          key: bundler-unit-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            bundler-unit-${{ env.cache-name }}-
-            bundler-unit-
+        run: |
+          curl -sL https://deb.nodesource.com/setup_12.x | bash -
+          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          apt-get -yqq install nodejs libpq-dev
 
       # dependencies
-      - name: Install Bundler gem
-        run: gem install bundler
       - name: Run bundle install
         run: |
-          bundle config path vendor/bundle
-          bundle config set without lint development production
+          bundle config set without development production
           bundle install --jobs 4 --retry 3 --deployment
+
       - name: Setup database
-        run: bundle exec rails db:migrate
+        run: |
+          bundle exec rails db:migrate
+        env:
+          DATABASE_URL: postgres://postgres:postgres@postgres:5432/gmmcalcombr_test
 
       # script
       - name: Run tests
-        run: bundle exec rspec
+        run: |
+          bundle exec rspec
+        env:
+          DATABASE_URL: postgres://postgres:postgres@postgres:5432/gmmcalcombr_test
+          DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: true
 
       - name: Upload backend coverage result
         uses: actions/upload-artifact@v1
@@ -70,27 +67,18 @@ jobs:
     name: 'Unit: Frontend'
     runs-on: ubuntu-18.04
 
+    container:
+      image: ruby:2.7.0
+
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-
-      # caching
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Cache node modules
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: yarn-unit-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            yarn-unit-${{ env.cache-name }}-
-            yarn-unit-
+      - name: Install APT dependencies
+        run: |
+          curl -sL https://deb.nodesource.com/setup_12.x | bash -
+          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          apt-get -yqq install nodejs
 
       - name: Install yarn
         run: npm i -g yarn
@@ -112,6 +100,9 @@ jobs:
     runs-on: ubuntu-18.04
 
     if: github.event_name == 'push'
+
+    container:
+      image: ruby:2.7.0
 
     needs:
       - backend
