--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,13 +2,10 @@ name: Deploy
 
 on:
   push:
-    branches:
-      - master
+    # branches:
+    #   - master
   release:
     types: [published]
-
-env:
-  RUBY_VERSION: '2.7.0'
 
 jobs:
   staging:
@@ -23,13 +20,12 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install dpl gem
-        run: |
-          gem install dpl --no-document --version "~> 1.10"
-
       - name: Deploy
+        env:
+          HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+          HEROKU_APP_NAME: "gmmcal-dev"
         run: |
-          dpl --provider=heroku --app=gmmcal-dev --api-key=${{ secrets.HEROKU_API_KEY }}
+          git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git HEAD:master
 
   production:
     name: 'Deploy: Production'
@@ -43,10 +39,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install dpl gem
-        run: |
-          gem install dpl --no-document --version "~> 1.10"
-
       - name: Deploy
+        env:
+          HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+          HEROKU_APP_NAME: "gmmcal"
         run: |
-          dpl --provider=heroku --app=gmmcal --api-key=${{ secrets.HEROKU_API_KEY }}
+          git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git HEAD:master
